--- a/lovely.toml
+++ b/lovely.toml
@@ -16,3 +16,36 @@ for i=1, #G.jokers.cards do
     eval_card(G.jokers.cards[i], {pl_cash_out = true})
 end
 '''
+
+[[patches]]
+[patches.pattern]
+target = "functions/button_callbacks.lua"
+match_indent = true
+pattern = '''add_tag(_tag.config.ref_table)'''
+position = "after"
+payload = '''
+if G.jokers and G.jokers.cards then
+    for i=1, #G.jokers.cards do
+        if G.jokers.cards[i].config.center.key == "j_pl_grape_soda" then
+        G.E_MANAGER:add_event(Event({
+        trigger = 'immediate',
+        func = function()
+          delay(0.3)
+          SMODS.calculate_context({skip_blind = true})
+          save_run()
+          for i = 1, #G.GAME.tags do
+            G.GAME.tags[i]:apply_to_run({type = 'immediate'})
+          end
+          for i = 1, #G.GAME.tags do
+            if G.GAME.tags[i]:apply_to_run({type = 'new_blind_choice'}) then break end
+          end
+          return true
+        end
+      }))
+      _tag.children[2] = nil
+      _tag.children[1] = nil
+        return 
+        end
+    end
+end
+'''
