croissant functionality (needs work)

--- a/lovely.toml
+++ b/lovely.toml
@@ -19,6 +19,51 @@ end
 
 [[patches]]
 [patches.pattern]
+target = "functions/common_events.lua"
+match_indent = true
+pattern = '''func = (function() check_for_unlock{type = 'upgrade_hand', hand = hand, level = G.GAME.hands[hand].level} return true end)
+    }))'''
+position = "after"
+payload = '''
+if G.jokers and G.jokers.cards then
+  for i=1, #G.jokers.cards do
+    if G.jokers.cards[i].config.center.key == "j_pl_croissant" then
+      eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
+      G.GAME.hands[hand].level = math.max(0, G.GAME.hands[hand].level + amount)
+      G.GAME.hands[hand].mult = math.max(G.GAME.hands[hand].s_mult + G.GAME.hands[hand].l_mult*(G.GAME.hands[hand].level - 1), 1)
+      G.GAME.hands[hand].chips = math.max(G.GAME.hands[hand].s_chips + G.GAME.hands[hand].l_chips*(G.GAME.hands[hand].level - 1), 0)
+      if not instant then 
+          G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.2, func = function()
+              play_sound('tarot1')
+              if card then card:juice_up(0.8, 0.5) end
+              G.TAROT_INTERRUPT_PULSE = true
+              return true end }))
+          update_hand_text({delay = 0}, {mult = G.GAME.hands[hand].mult, StatusText = true})
+          G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.9, func = function()
+              play_sound('tarot1')
+              if card then card:juice_up(0.8, 0.5) end
+              return true end }))
+          update_hand_text({delay = 0}, {chips = G.GAME.hands[hand].chips, StatusText = true})
+          G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.9, func = function()
+              play_sound('tarot1')
+              if card then card:juice_up(0.8, 0.5) end
+              G.TAROT_INTERRUPT_PULSE = nil
+              return true end }))
+          update_hand_text({sound = 'button', volume = 0.7, pitch = 0.9, delay = 0}, {level=G.GAME.hands[hand].level})
+          delay(1.3)
+      end
+      G.E_MANAGER:add_event(Event({
+          trigger = 'immediate',
+          func = (function() check_for_unlock{type = 'upgrade_hand', hand = hand, level = G.GAME.hands[hand].level} return true end)
+      }))
+      eval_card(G.jokers.cards[i], {pl_croissant_done = true})
+    end
+  end
+end
+'''
+
+[[patches]]
+[patches.pattern]
 target = "functions/button_callbacks.lua"
 match_indent = true
 pattern = '''add_tag(_tag.config.ref_table)'''
