--- a/lovely.toml
+++ b/lovely.toml
@@ -25,7 +25,7 @@ pattern = '''func = (function() check_for_unlock{type = 'upgrade_hand', hand = h
     }))'''
 position = "after"
 payload = '''
-if G.jokers and G.jokers.cards then
+if G.jokers and G.jokers.cards and card.ability.name ~= 'Black Hole' then
   for i=1, #G.jokers.cards do
     if G.jokers.cards[i].config.center.key == "j_pl_croissant" then
       eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
@@ -57,6 +57,49 @@ if G.jokers and G.jokers.cards then
           func = (function() check_for_unlock{type = 'upgrade_hand', hand = hand, level = G.GAME.hands[hand].level} return true end)
       }))
       eval_card(G.jokers.cards[i], {pl_croissant_done = true})
+    end
+  end
+end
+'''
+
+[[patches]]
+[patches.pattern]
+target = "card.lua"
+match_indent = true
+pattern = '''for k, v in pairs(G.GAME.hands) do
+            level_up_hand(self, k, true)
+        end
+        update_hand_text({sound = 'button', volume = 0.7, pitch = 1.1, delay = 0}, {mult = 0, chips = 0, handname = '', level = ''})'''
+position = "after"
+payload = '''
+if G.jokers and G.jokers.cards then
+  for i=1, #G.jokers.cards do
+    if G.jokers.cards[i].config.center.key == "j_pl_croissant" then
+      eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
+      update_hand_text({sound = 'button', volume = 0.7, pitch = 0.8, delay = 0.3}, {handname=localize('k_all_hands'),chips = '...', mult = '...', level=''})
+        G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.2, func = function()
+            play_sound('tarot1')
+            self:juice_up(0.8, 0.5)
+            G.TAROT_INTERRUPT_PULSE = true
+            return true end }))
+        update_hand_text({delay = 0}, {mult = '+', StatusText = true})
+        G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.9, func = function()
+            play_sound('tarot1')
+            self:juice_up(0.8, 0.5)
+            return true end }))
+        update_hand_text({delay = 0}, {chips = '+', StatusText = true})
+        G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.9, func = function()
+            play_sound('tarot1')
+            self:juice_up(0.8, 0.5)
+            G.TAROT_INTERRUPT_PULSE = nil
+            return true end }))
+        update_hand_text({sound = 'button', volume = 0.7, pitch = 0.9, delay = 0}, {level='+1'})
+        delay(1.3)
+        for k, v in pairs(G.GAME.hands) do
+            level_up_hand(self, k, true)
+        end
+        update_hand_text({sound = 'button', volume = 0.7, pitch = 1.1, delay = 0}, {mult = 0, chips = 0, handname = '', level = ''})
+        eval_card(G.jokers.cards[i], {pl_croissant_done = true})
     end
   end
 end
