--- a/lovely.toml
+++ b/lovely.toml
@@ -19,6 +19,27 @@ end
 
 [[patches]]
 [patches.pattern]
+target = "card.lua"
+match_indent = true
+pattern = '''function Card:set_base(card, initial)
+    card = card or {}'''
+position = "after"
+payload = '''
+if G.jokers and G.jokers.cards and card then
+  for i=1, #G.jokers.cards do
+    if G.jokers.cards[i].config.center.key == 'j_pl_painterly_joker' and self.playing_card and self.config.card.suit ~= card.suit and not initial then
+      G.jokers.cards[i].ability.extra.chips = G.jokers.cards[i].ability.extra.chips + 4
+      card_eval_status_text(G.jokers.cards[i], 'jokers', nil, nil, nil, 
+      {
+        message = localize { type = 'variable', key = 'a_chips', vars = { G.jokers.cards[i].ability.extra.chips } }
+      })
+    end
+  end
+end
+'''
+
+[[patches]]
+[patches.pattern]
 target = "functions/common_events.lua"
 match_indent = true
 pattern = '''func = (function() check_for_unlock{type = 'upgrade_hand', hand = hand, level = G.GAME.hands[hand].level} return true end)
