--- a/lovely.toml
+++ b/lovely.toml
@@ -28,10 +28,10 @@ payload = '''
 if G.jokers and G.jokers.cards and card then
   for i=1, #G.jokers.cards do
     if G.jokers.cards[i].config.center.key == 'j_pl_painterly_joker' and self.playing_card and self.config.card.suit ~= card.suit and not initial then
-      G.jokers.cards[i].ability.extra.chips = G.jokers.cards[i].ability.extra.chips + 4
+      G.jokers.cards[i].ability.extra.chips = G.jokers.cards[i].ability.extra.chips + G.jokers.cards[i].ability.extra.chips_mod
       card_eval_status_text(G.jokers.cards[i], 'jokers', nil, nil, nil, 
       {
-        message = localize { type = 'variable', key = 'a_chips', vars = { G.jokers.cards[i].ability.extra.chips } }
+        message = localize('k_upgrade_ex'), colour = G.C.CHIPS
       })
     end
   end
