--- a/lovely.toml
+++ b/lovely.toml
@@ -28,10 +28,10 @@ payload = '''
 if G.jokers and G.jokers.cards and card then
   for i=1, #G.jokers.cards do
     if G.jokers.cards[i].config.center.key == 'j_pl_painterly_joker' and self.playing_card and self.config.card.suit ~= card.suit and not initial then
-      G.jokers.cards[i].ability.extra.chips = G.jokers.cards[i].ability.extra.chips + G.jokers.cards[i].ability.extra.chips_mod
+      G.jokers.cards[i].ability.extra.xmult = G.jokers.cards[i].ability.extra.xmult + G.jokers.cards[i].ability.extra.xmult_mod
       card_eval_status_text(G.jokers.cards[i], 'jokers', nil, nil, nil, 
       {
-        message = localize('k_upgrade_ex'), colour = G.C.CHIPS
+        message = localize('k_upgrade_ex'), colour = G.C.MULT
       })
     end
   end
@@ -46,7 +46,7 @@ pattern = '''func = (function() check_for_unlock{type = 'upgrade_hand', hand = h
     }))'''
 position = "after"
 payload = '''
-if G.jokers and G.jokers.cards and card.ability.name ~= 'Black Hole' then
+if G.jokers and G.jokers.cards then
   for i=1, #G.jokers.cards do
     if G.jokers.cards[i].config.center.key == "j_pl_croissant" then
       eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
