painterly works based on context, croissant re-fixed

--- a/lovely.toml
+++ b/lovely.toml
@@ -21,18 +21,15 @@ end
 [patches.pattern]
 target = "card.lua"
 match_indent = true
-pattern = '''function Card:set_base(card, initial)
-    card = card or {}'''
-position = "after"
+pattern = '''self.config.card = card'''
+position = "before"
 payload = '''
-if G.jokers and G.jokers.cards and card then
-  for i=1, #G.jokers.cards do
-    if G.jokers.cards[i].config.center.key == 'j_pl_painterly_joker' and self.playing_card and self.config.card.suit ~= card.suit and not initial then
-      G.jokers.cards[i].ability.extra.xmult = G.jokers.cards[i].ability.extra.xmult + G.jokers.cards[i].ability.extra.xmult_mod
-      card_eval_status_text(G.jokers.cards[i], 'jokers', nil, nil, nil, 
-      {
-        message = localize('k_upgrade_ex'), colour = G.C.MULT
-      })
+if card then
+  if self.playing_card and self.config.card.suit ~= card.suit and not initial then
+    if G.jokers and G.jokers.cards then
+      for i=1, #G.jokers.cards do
+        eval_card(G.jokers.cards[i], {pl_suit_changed = true})
+      end
     end
   end
 end
@@ -46,9 +43,9 @@ pattern = '''func = (function() check_for_unlock{type = 'upgrade_hand', hand = h
     }))'''
 position = "after"
 payload = '''
-if G.jokers and G.jokers.cards then
+if G.jokers and G.jokers.cards and card and card.ability then
   for i=1, #G.jokers.cards do
-    if G.jokers.cards[i].config.center.key == "j_pl_croissant" then
+    if G.jokers.cards[i].config.center.key == "j_pl_croissant" and card.ability.name ~= 'Black Hole' then
       eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
       G.GAME.hands[hand].level = math.max(0, G.GAME.hands[hand].level + amount)
       G.GAME.hands[hand].mult = math.max(G.GAME.hands[hand].s_mult + G.GAME.hands[hand].l_mult*(G.GAME.hands[hand].level - 1), 1)
