fixed croissant, lamp. and painterly

--- a/lovely.toml
+++ b/lovely.toml
@@ -17,19 +17,19 @@ for i=1, #G.jokers.cards do
 end
 '''
 
+#painterly joker context
+
 [[patches]]
 [patches.pattern]
 target = "card.lua"
 match_indent = true
-pattern = '''self.config.card = card'''
-position = "before"
+pattern = '''local new_card = G.P_CARDS[new_code..'_'..new_val]'''
+position = "after"
 payload = '''
-if card then
-  if self.playing_card and self.config.card.suit ~= card.suit and not initial then
-    if G.jokers and G.jokers.cards then
-      for i=1, #G.jokers.cards do
-        eval_card(G.jokers.cards[i], {pl_suit_changed = true})
-      end
+if new_code ~= SMODS.Suits[self.base.suit].card_key then
+  if G.jokers and G.jokers.cards then
+    for i=1, #G.jokers.cards do
+      eval_card(G.jokers.cards[i], {pl_suit_changed = true})
     end
   end
 end
@@ -45,7 +45,7 @@ position = "after"
 payload = '''
 if G.jokers and G.jokers.cards and card and card.ability then
   for i=1, #G.jokers.cards do
-    if G.jokers.cards[i].config.center.key == "j_pl_croissant" and card.ability.name ~= 'Black Hole' then
+    if G.jokers.cards[i].config.center.key == "j_pl_croissant" and card.ability.name ~= 'Black Hole' and not G.jokers.cards[i].debuff then
       eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
       G.GAME.hands[hand].level = math.max(0, G.GAME.hands[hand].level + amount)
       G.GAME.hands[hand].mult = math.max(G.GAME.hands[hand].s_mult + G.GAME.hands[hand].l_mult*(G.GAME.hands[hand].level - 1), 1)
@@ -178,7 +178,9 @@ pattern = '''G.CONTROLLER.locks.selling_card = true'''
 position = "after"
 payload = '''
 for i=1, #G.jokers.cards do
+  if self.ability.set == 'Joker' then
     eval_card(G.jokers.cards[i], {pl_selling_joker = true})
+  end
 end
 '''
 
