croissant blueprint compat

--- a/lovely.toml
+++ b/lovely.toml
@@ -63,39 +63,13 @@ pattern = '''func = (function() check_for_unlock{type = 'upgrade_hand', hand = h
     }))'''
 position = "after"
 payload = '''
-if G.jokers and G.jokers.cards and card and card.ability then
+if G.jokers and G.jokers.cards and card and card.ability and card.ability.name ~= 'Black Hole' and not G.GAME.pl_croissant_disallowed then
+  G.GAME.pl_lvl_hand = hand
+  G.GAME.pl_lvl_card = card
+  G.GAME.pl_lvl_instant = instant
+  G.GAME.pl_lvl_amount = amount
   for i=1, #G.jokers.cards do
-    if G.jokers.cards[i].config.center.key == "j_pl_croissant" and card.ability.name ~= 'Black Hole' and not G.jokers.cards[i].debuff then
-      eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
-      G.GAME.hands[hand].level = math.max(0, G.GAME.hands[hand].level + amount)
-      G.GAME.hands[hand].mult = math.max(G.GAME.hands[hand].s_mult + G.GAME.hands[hand].l_mult*(G.GAME.hands[hand].level - 1), 1)
-      G.GAME.hands[hand].chips = math.max(G.GAME.hands[hand].s_chips + G.GAME.hands[hand].l_chips*(G.GAME.hands[hand].level - 1), 0)
-      if not instant then 
-          G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.2, func = function()
-              play_sound('tarot1')
-              if card then card:juice_up(0.8, 0.5) end
-              G.TAROT_INTERRUPT_PULSE = true
-              return true end }))
-          update_hand_text({delay = 0}, {mult = G.GAME.hands[hand].mult, StatusText = true})
-          G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.9, func = function()
-              play_sound('tarot1')
-              if card then card:juice_up(0.8, 0.5) end
-              return true end }))
-          update_hand_text({delay = 0}, {chips = G.GAME.hands[hand].chips, StatusText = true})
-          G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.9, func = function()
-              play_sound('tarot1')
-              if card then card:juice_up(0.8, 0.5) end
-              G.TAROT_INTERRUPT_PULSE = nil
-              return true end }))
-          update_hand_text({sound = 'button', volume = 0.7, pitch = 0.9, delay = 0}, {level=G.GAME.hands[hand].level})
-          delay(1.3)
-      end
-      G.E_MANAGER:add_event(Event({
-          trigger = 'immediate',
-          func = (function() check_for_unlock{type = 'upgrade_hand', hand = hand, level = G.GAME.hands[hand].level} return true end)
-      }))
-      eval_card(G.jokers.cards[i], {pl_croissant_done = true})
-    end
+    eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
   end
 end
 '''
@@ -110,35 +84,11 @@ pattern = '''for k, v in pairs(G.GAME.hands) do
         update_hand_text({sound = 'button', volume = 0.7, pitch = 1.1, delay = 0}, {mult = 0, chips = 0, handname = '', level = ''})'''
 position = "after"
 payload = '''
-if G.jokers and G.jokers.cards then
+if G.jokers and G.jokers.cards and not G.GAME.pl_croissant_disallowed then
+  G.GAME.pl_lvl_card = self
+  G.GAME.pl_lvl_instant = true
   for i=1, #G.jokers.cards do
-    if G.jokers.cards[i].config.center.key == "j_pl_croissant" then
-      eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
-      update_hand_text({sound = 'button', volume = 0.7, pitch = 0.8, delay = 0.3}, {handname=localize('k_all_hands'),chips = '...', mult = '...', level=''})
-        G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.2, func = function()
-            play_sound('tarot1')
-            self:juice_up(0.8, 0.5)
-            G.TAROT_INTERRUPT_PULSE = true
-            return true end }))
-        update_hand_text({delay = 0}, {mult = '+', StatusText = true})
-        G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.9, func = function()
-            play_sound('tarot1')
-            self:juice_up(0.8, 0.5)
-            return true end }))
-        update_hand_text({delay = 0}, {chips = '+', StatusText = true})
-        G.E_MANAGER:add_event(Event({trigger = 'after', delay = 0.9, func = function()
-            play_sound('tarot1')
-            self:juice_up(0.8, 0.5)
-            G.TAROT_INTERRUPT_PULSE = nil
-            return true end }))
-        update_hand_text({sound = 'button', volume = 0.7, pitch = 0.9, delay = 0}, {level='+1'})
-        delay(1.3)
-        for k, v in pairs(G.GAME.hands) do
-            level_up_hand(self, k, true)
-        end
-        update_hand_text({sound = 'button', volume = 0.7, pitch = 1.1, delay = 0}, {mult = 0, chips = 0, handname = '', level = ''})
-        eval_card(G.jokers.cards[i], {pl_croissant_done = true})
-    end
+    eval_card(G.jokers.cards[i], {pl_croissant_upgrade = true})
   end
 end
 '''
